<resources>
    <string name="app_name">Assignment12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vase">Vase</string>
    <string name="marble_flower_vase">Marble Flower Vase</string>
    <string name="review">4.7</string>
    <string name="soldItems">8.568 Sold</string>
    <string name="price">$89.35</string>
    <string name="tv_reviews">(7,345 reviews)</string>
    <string name="description">Description</string>
    <string name="tv_color">Color</string>
    <string name="q">2</string>
    <string name="total_price">Total Price</string>
    <string name="add_to_cart">Add to Cart</string>
</resources>