<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mainPicture"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/ic_item_background"
        android:src="@drawable/vase1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_arrow"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="Back Button"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/marble_flower_vase"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@id/mainPicture"
        app:layout_constraintTop_toBottomOf="@id/mainPicture" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="35dp"
        android:layout_height="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainPicture"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_heart"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSoldQ"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_item_background"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:text="@string/soldItems"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_goneMarginStart="15dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/star"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_star_half"
        app:layout_constraintStart_toEndOf="@id/tvSoldQ"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStars"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/review"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/star"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_goneMarginStart="5dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="11dp"
        android:text="@string/tv_reviews"
        android:textColor="@color/white"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@id/tvStars"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_item_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStars" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:maxLines="2"
        android:text="fdghhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhfdxhgcgfxgbv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/tvColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/tv_color"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descText" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/colorLinear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvColor">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_oval"
            android:clickable="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_oval_red"
            android:layout_marginStart="10dp"
            android:clickable="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_oval_blue"
            android:layout_marginStart="10dp"
            android:clickable="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_oval_brown"
            android:layout_marginStart="10dp"
            android:clickable="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_oval_pink"
            android:layout_marginStart="10dp"
            android:clickable="true"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_oval_purple"
            android:layout_marginStart="10dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="Quantity"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/secondLine" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/spaceQ"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_item_background"
        app:layout_constraintStart_toEndOf="@id/tvQuantity"
        app:layout_constraintBottom_toTopOf="@id/secondLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="-"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/spaceQ"
        app:layout_constraintTop_toTopOf="@id/spaceQ"
        android:clickable="true"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/q"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/spaceQ"
        app:layout_constraintTop_toTopOf="@id/spaceQ"
        app:layout_constraintEnd_toEndOf="@id/spaceQ"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:text="+"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/spaceQ"
        app:layout_constraintTop_toTopOf="@id/spaceQ"
        android:clickable="true"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/secondLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_item_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnCart" />

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/totalPrice"
        android:layout_marginTop="15dp"
        android:text="@string/total_price"
        android:textColor="@color/white"
        android:layout_marginStart="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        android:text="$170.00"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginStart="10dp"
        android:id="@+id/totalPrice"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="250dp"
        android:layout_height="55dp"
        app:layout_constraintBottom_toBottomOf="@id/totalPrice"
        app:layout_constraintStart_toEndOf="@id/totalPrice"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_item_background"
        android:id="@+id/btnCart"
        android:clickable="true"
        android:contentDescription="Saves Item in Cart"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toTopOf="@id/btnCart"
        app:layout_constraintBottom_toBottomOf="@id/btnCart"
        app:layout_constraintStart_toStartOf="@id/btnCart"
        android:layout_marginStart="50dp"
        android:src="@drawable/ic_cart"
        android:id="@+id/icCart"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/icCart"
        app:layout_constraintTop_toTopOf="@id/btnCart"
        app:layout_constraintBottom_toBottomOf="@id/btnCart"
        android:text="@string/add_to_cart"
        android:layout_marginStart="15dp"
        android:textSize="20sp"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>